[gd_scene load_steps=11 format=3 uid="uid://dt4lu0u0rkdkm"]

[ext_resource type="Texture2D" uid="uid://wogkoxgx2cuo" path="res://Assets/art/Menu_Button.png" id="1_28flt"]
[ext_resource type="Script" uid="uid://ccf72tosejmpi" path="res://Scripts/main_menu.gd" id="1_48xlc"]
[ext_resource type="FontFile" uid="uid://b52chdl5ratcq" path="res://Assets/fonts/monogram.ttf" id="2_1ehe0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_trj04"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yhxw7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ehe0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ce3w2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n45e2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_opfnp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cp0ys"]

[node name="Main_Menu" type="Node2D"]
script = ExtResource("1_48xlc")

[node name="Button_Manager" type="Node2D" parent="."]

[node name="Credits" type="Button" parent="Button_Manager"]
texture_filter = 1
offset_left = 291.0
offset_top = 444.0
offset_right = 862.0
offset_bottom = 605.0
theme_override_fonts/font = ExtResource("2_1ehe0")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = SubResource("StyleBoxEmpty_trj04")
text = "Credits"
icon = ExtResource("1_28flt")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Quit" type="Button" parent="Button_Manager"]
texture_filter = 1
offset_left = 575.0
offset_top = 269.0
offset_right = 1146.0
offset_bottom = 429.0
theme_override_fonts/font = ExtResource("2_1ehe0")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = SubResource("StyleBoxEmpty_yhxw7")
text = "Quit"
icon = ExtResource("1_28flt")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Start" type="Button" parent="Button_Manager"]
texture_filter = 1
offset_left = 13.0
offset_top = 269.0
offset_right = 584.0
offset_bottom = 429.0
theme_override_fonts/font = ExtResource("2_1ehe0")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_1ehe0")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ce3w2")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_n45e2")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_opfnp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cp0ys")
text = "Play"
icon = ExtResource("1_28flt")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Credit_Screen" type="Node2D" parent="."]
visible = false

[node name="Back" type="Button" parent="Credit_Screen"]
texture_filter = 1
offset_left = 291.0
offset_top = 441.0
offset_right = 862.0
offset_bottom = 604.0
theme_override_fonts/font = ExtResource("2_1ehe0")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = SubResource("StyleBoxEmpty_yhxw7")
text = "Back"
icon = ExtResource("1_28flt")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Credits_Names" type="RichTextLabel" parent="Credit_Screen"]
texture_filter = 1
offset_right = 1147.0
offset_bottom = 431.0
theme_override_fonts/normal_font = ExtResource("2_1ehe0")
theme_override_font_sizes/normal_font_size = 75
text = "Art: Emma Brandt and Owen Young

Programming Devin Reynolds and Wyatt Bayless

Level Design: 
Colin Sullivan
"

[connection signal="pressed" from="Button_Manager/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Button_Manager/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Button_Manager/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Credit_Screen/Back" to="." method="_on_back_pressed"]
